--- a/KW2 RMD.Rmd
+++ b/KW2 RMD.Rmd
@@ -21,6 +21,18 @@ library(Biostrings)
 library(tidyverse)
 #load randomforest
 library(randomForest)
+#install.packages("caret")
+library(caret)
+#install.packages("rpart")
+library("rpart")
+#install.packages("rpart.plot")
+library("rpart.plot")
+#install.packages("rattle")
+library("rattle")
+#install.packages("class")
+library("class")
+#install.packages("gmodels")
+library(gmodels)
 ## May not need, try without to see
 #install.packages('ggridges')
 #library(ggridges)
@@ -135,12 +147,8 @@ df_firmi_actino <- df_firmi_actino %>%
 #Convert the sequences to DNAStringSet (actually- created a new column just to be safe)
 df_firmi_actino$Sequence_16S2<-DNAStringSet(df_firmi_actino$Sequence_16S)
 
-#Duplicate the dataframe for later (when we look at 2-mer and 3-mer calculations). Set aside
-df_firmi_actino_k3 <-df_firmi_actino
-df_firmi_actino_k2 <-df_firmi_actino
-
 #Calculate K-mers of length 4 and append to dataframe 
-df_firmi_actino <- cbind(df_firmi_actino, as.data.frame(oligonucleotideFrequency(df_firmi_actino$Sequence_16S2, 4)))
+df_firmi_actino_k4 <- cbind(df_firmi_actino, as.data.frame(oligonucleotideFrequency(df_firmi_actino$Sequence_16S2, 4)))
 ```
 
 
@@ -150,43 +158,40 @@ df_firmi_actino <- cbind(df_firmi_actino, as.data.frame(oligonucleotideFrequency
 ###Create a validation data set
 
 #Convert Sequence_16S2 from a DNAStringSet back to a character data so tidyverse functions can be used 
-df_firmi_actino$Sequence_16S2<-as.character(df_firmi_actino$Sequence_16S2)
+df_firmi_actino_k4$Sequence_16S2<-as.character(df_firmi_actino_k4$Sequence_16S2)
 
 #Set seed so results are reproducible in the future
 set.seed(217)
 
 #Sample 1000 individuals from each phylum (~25% of individuals per phylum)
-dfvalidation<-df_firmi_actino %>% 
+dfvalidation_k4 <-df_firmi_actino_k4 %>% 
   group_by(Phylum)%>% 
   sample_n(1000)
 
 #Confirm that phyla are equally represented in the validation set
-dfvalidation %>% 
-  group_by(Phylum) %>% 
-  summarize(count=n())
-
+dfvalidation_k4 %>% 
+  count(Phylum)
 
 ###Create a Training Dataset
 
-#Set seed so results are reproducible
-set.seed(13)
-
 #Create a training set composed of 2000 hits from each phylum
-dfTraining <- df_firmi_actino%>%
-  filter(!Title_16S %in% dfvalidation$Title_16S) %>% 
+dfTraining_k4 <- df_firmi_actino_k4 %>%
+  filter(!Title_16S %in% dfvalidation_k4$Title_16S) %>% 
   group_by(Phylum) %>%
   sample_n(2000)
 
 #Confirm that Phyla are equally represented in the training set
-dfTraining %>% 
-  group_by(Phylum) %>% 
-  summarize(count=n())
+dfTraining_k4 %>% 
+  count(Phylum)
 ```
 
 ###Build an RF Classifier
 ```{r RF Classifier}
+
+### Going to require a test for ntrees, for now leaving set to 600 as an approximation 
+
 #Build a classifier to classify phylum by 4-mer frequency and assess the importance of predictors
-phylum_classifier <- randomForest(x = dfTraining[, 5:260], y = as.factor(dfTraining$Phylum), ntree = 200, importance = TRUE)
+phylum_classifier_k4 <- randomForest(x = dfTraining_k4[, 5:260], y = as.factor(dfTraining_k4$Phylum), ntree = 600, importance = TRUE)
 
 #Explanations for the most relevant model choices:
 #n-tree set to be twice the size of the number of data points in the training set (4000) to enable so data points to make it into the model more than once; a higher ntree is not initially selected due to the greater computational power required, but it is understood that this can be revisited if model performance need to be improved.
@@ -205,55 +210,52 @@ phylum_classifier <- randomForest(x = dfTraining[, 5:260], y = as.factor(dfTrain
 ###Assess the Results of the RF Classifier
 ```{r Classifier Result}
 #View an overview of the classifier: 0.18% OOB error estimate
-phylum_classifier
-
+phylum_classifier_k4
 
 ##RF Validation Set Assessment #1: Confusion Matrix. Use random forest classifier to try and predict phylum for validation set
 
-#Install and load  caret package need to create prediction
-#install.packages("caret")
-library(caret)
 
 #Encode phylum (the target categorical feature) of validation data as factor with two levels. This is necessary because confusionMatrix() requires that 'data' and 'reference be factors with the same levels.
-dfvalidation$Phylum = factor(dfvalidation$Phylum, levels = c("actinobacteria","firmicutes"))
+dfvalidation_k4$Phylum = factor(dfvalidation_k4$Phylum, levels = c("actinobacteria","firmicutes"))
 
 #Create a prediction (of phylum, from test data) (using caret library)
-phylum_prediction<-predict(phylum_classifier, newdata=dfvalidation[,5:260])
+phylum_prediction_k4<-predict(phylum_classifier_k4, newdata=dfvalidation_k4[,5:260])
 
 #Use the predication to create a confusion matrix and obtain an accuracy score.
-confusion_matrix<-confusionMatrix(phylum_prediction,dfvalidation$Phylum)
+confusion_matrix_k4<-confusionMatrix(phylum_prediction_k4,dfvalidation_k4$Phylum)
 
 #Print the confusion matrix; accuracy of 99.85%
-print(confusion_matrix)
+print(confusion_matrix_k4)
 ```
 
 ###Explore the Important Features in Random Forest Classifier
 ```{r Features}
 #Explore the classifier's importance, and assign to variable for later viewing
-importance<-phylum_classifier$importance
+#This variable may be unused
+importance<-phylum_classifier_k4$importance
 
 #Plot the importance of each feature
-varImpPlot(x=phylum_classifier, main="Feature Importance of Random Forest Phylum Classifier",col="black",bg="purple")
+varImpPlot(x=phylum_classifier_k4, sort = T, main="Feature Importance of Random Forest Phylum Classifier",col="black",bg="purple", cex = 0.5)
 
 #Create a dataframe from importance() output
-df_importance <- importance(phylum_classifier) %>% 
+df_importance_k4 <- importance(phylum_classifier_k4) %>% 
   data.frame() %>% 
   mutate(feature = row.names(.))
 
 #Explore the column MeanDecreaseGini
-summary(df_importance$MeanDecreaseGini)
+summary(df_importance_k4$MeanDecreaseGini)
 
 #Create a boxplot of distribution of feature importance on log scale. Log axis was used because variability in importance is small relative to its range, and the boxplot was otherwise very 'squished'. Note the outliers with particularly high importance.
-boxplot(df_importance$MeanDecreaseGini,
+boxplot(df_importance_k4$MeanDecreaseGini,
         xlab="Importance", ylab="Features", main="Boxplot Showing Distribution of 4-mer Feature Importance on Log Scale \nin Random Forest Classification of Actinobacteria or Firmicutes",log="x",horizontal=TRUE, col="lightgray",cex.lab=1.2)
 
 #Create a dataframe containg a subset of the features (those with MeanDecreaseGini>50))
-df_importance_50 <-df_importance %>% 
+df_importance_k4_50 <-df_importance_k4 %>% 
   filter(MeanDecreaseGini>50)
 
 ##Plot the above dataframe to view the features with the highest gini importance.
 #Note:each feature's importance is assessed based on meandecreaseaccuracy (extent of loss in prediction performance when variable is omitted) and meandecreasegini (node impurity). 
-ggplot(df_importance_50, aes(y = reorder(feature, MeanDecreaseGini),
+ggplot(df_importance_k4_50, aes(y = reorder(feature, MeanDecreaseGini),
                              x = MeanDecreaseGini)) +
   geom_bar(stat='identity', fill='steelblue') +
   geom_text(aes(label=round(MeanDecreaseGini,digits=1)),hjust=-0.1,color="deepskyblue4", size=4.0) +
@@ -272,21 +274,22 @@ ggplot(df_importance_50, aes(y = reorder(feature, MeanDecreaseGini),
 
 
 ###Create RF Model based only on the top 4 most important features (as defined MeanDecreaseGini)
-phylum_classifier_top_features <- randomForest(x = dfTraining[, c("GGCC","ACCA","TTAG","TTTA")], y = as.factor(dfTraining$Phylum), ntree = 200, importance = TRUE)
+#Again pick ntree not arbitrarily 
+phylum_classifier_top_features_k4 <- randomForest(x = dfTraining_k4[, c("GGCC","ACCA","TTAG","TTTA")], y = as.factor(dfTraining_k4$Phylum), ntree = 600, importance = TRUE)
 
 #Overview of Classifier (Top 4 features): OOB estimate of error rate is 1.38%
-phylum_classifier_top_features
+phylum_classifier_top_features_k4
 
 
 ###Create RF model based only on the most important feature (as defined by MeanDecreaseGini): GGCC
-phylum_classifier_GGCC<- randomForest(x = dfTraining[, "GGCC"], y = as.factor(dfTraining$Phylum), ntree = 200, importance = TRUE)
+phylum_classifier_GGCC<- randomForest(x = dfTraining_k4[, "GGCC"], y = as.factor(dfTraining$Phylum), ntree = 600, importance = TRUE)
 
 #Overview of Classifier(single feature: GGCC): OOB estimate of error rate is 5.95%
 phylum_classifier_GGCC
 ```
 ```{r Model}
 ###Create RF model based only on the least important feature (as defined by MeanDecreaseGini): CTAC
-phylum_classifier_CTAC<- randomForest(x = dfTraining[, "CTAC"], y = as.factor(dfTraining$Phylum), ntree = 200, importance = TRUE)
+phylum_classifier_CTAC<- randomForest(x = dfTraining[, "CTAC"], y = as.factor(dfTraining$Phylum), ntree = 600, importance = TRUE)
 
 #Overview of Classifier(single feature: CTAC): OOB estimate of error rate is 18.92%
 phylum_classifier_CTAC
@@ -297,21 +300,16 @@ phylum_classifier_CTAC
 ###REPEATING RANDOM FOREST FOR 3-mers----
 ```{r 3-mers}
 #Calculate k-mers of length 3 and append to dataframe
-df_firmi_actino_k3 <- cbind(df_firmi_actino_k3, as.data.frame(trinucleotideFrequency(df_firmi_actino_k3$Sequence_16S2)))
+df_firmi_actino_k3 <- cbind(df_firmi_actino, as.data.frame(trinucleotideFrequency(df_firmi_actino$Sequence_16S2)))
 
 #Convert Sequence_16S2 from a DNAStringSet back to a tibble dataframe
 df_firmi_actino_k3$Sequence_16S2<-as.character(df_firmi_actino_k3$Sequence_16S2)
-
-#Set seed so results are reproducible in the future
-set.seed(118)
 
 #Create validation data set for 3-mers by sampling 1000 records from each phylum
 dfvalidation_k3<-df_firmi_actino_k3 %>% 
   group_by(Phylum)%>% 
   sample_n(1000)
 
-#Set seed so results are reproducible in the future
-set.seed(93)
 
 #Create training dataset for 3-mers by sampling 2000 records from each phylum
 dfTraining_k3 <- df_firmi_actino_k3%>%
@@ -320,7 +318,8 @@ dfTraining_k3 <- df_firmi_actino_k3%>%
   sample_n(2000)
 
 #Build RF Classifier for 3-mers
-phylum_classifier_k3 <- randomForest(x = dfTraining_k3[, 5:68], y = as.factor(dfTraining_k3$Phylum), ntree = 200, importance = TRUE)
+#Again choose ntree properly
+phylum_classifier_k3 <- randomForest(x = dfTraining_k3[, 5:68], y = as.factor(dfTraining_k3$Phylum), ntree = 600, importance = TRUE)
 
 #See overview of classifier for training set: 0.25% OOB error estimate
 phylum_classifier_k3
@@ -345,21 +344,16 @@ confusion_matrix_k3
 
 ```{r 2-mers}
 #Calculate k-mers of length 2 and append to dataframe
-df_firmi_actino_k2 <- cbind(df_firmi_actino_k2, as.data.frame(dinucleotideFrequency(df_firmi_actino_k2$Sequence_16S2)))
+df_firmi_actino_k2 <- cbind(df_firmi_actino, as.data.frame(dinucleotideFrequency(df_firmi_actino$Sequence_16S2)))
 
 #Convert Sequence_16S2 from a DNAStringSet back to a tibble dataframe
 df_firmi_actino_k2$Sequence_16S2<-as.character(df_firmi_actino_k2$Sequence_16S2)
 
-#Set seed so results are reproducible in the future
-set.seed(80)
 
 #Create validation data set for 2-mers by sampling 1000 records from each phylum
 dfvalidation_k2<-df_firmi_actino_k2 %>% 
   group_by(Phylum)%>% 
   sample_n(1000)
-
-#Set seed so results are reproducible in the future
-set.seed(129)
 
 #Create training dataset for 2-mers by sampling 2000 records from each phylum
 dfTraining_k2 <- df_firmi_actino_k2%>%
@@ -368,7 +362,8 @@ dfTraining_k2 <- df_firmi_actino_k2%>%
   sample_n(2000) #why?
 
 #Build RF Classifier for 2-mers
-phylum_classifier_k2 <- randomForest(x = dfTraining_k2[, 5:20], y = as.factor(dfTraining_k2$Phylum), ntree = 200, importance = TRUE)
+#Work out ntree properly
+phylum_classifier_k2 <- randomForest(x = dfTraining_k2[, 5:20], y = as.factor(dfTraining_k2$Phylum), ntree = 600, importance = TRUE)
 
 #See overview of classifier for training set: 0.9% OOB error estimate
 phylum_classifier_k2
@@ -392,21 +387,17 @@ confusion_matrix_k2
 
 ####Classification Tree (using rpart package)----
 ```{r Classification}
-#install.packages("rpart")
-library("rpart")
-#install.packages("rpart.plot")
-library("rpart.plot")
 
 #Extract k-mer and Phylum columns from dfTraining in order to more easily use rpart
-df_Training_firmi_actino_sub <- dfTraining%>% 
+df_Training_firmi_actino_sub_k4 <- dfTraining_k4%>% 
   select(-Title_16S, -Sequence_16S, -Sequence_16S2)
 
 #Extract k-mer and Phylum columns from dfvalidation in order to more easily use rpart
-df_validation_firmi_actino_sub <- dfvalidation%>% 
+df_validation_firmi_actino_sub_k4 <- dfvalidation_k4%>% 
   select(-Title_16S, -Sequence_16S, -Sequence_16S2)
 
 #Fit an classification tree
-rpart_tree<-rpart(formula=Phylum~., data= df_Training_firmi_actino_sub, method='class')
+rpart_tree_k4 <-rpart(formula=Phylum~., data= df_Training_firmi_actino_sub_k4, method='class')
 
 #Explanation for some of the most relevant argument choices in above model:
 #formula=Phylum~. because we want to predict phylum using all other variables in the table (4-mer features) as predictors  
@@ -421,56 +412,49 @@ rpart_tree<-rpart(formula=Phylum~., data= df_Training_firmi_actino_sub, method='
 ##Evaluate the Decision Tree
 
 #Check the tree. Note: it has 7 nodes (see bracketed numbers)
-rpart_tree
+rpart_tree_k4
 
 #View summary of the tree 
-summary(rpart_tree)
+summary(rpart_tree_k4)
 
 #Predict the test dataset
-rpart_prediction<-predict(rpart_tree,newdata=df_validation_firmi_actino_sub[,2:257], type='class')
+rpart_k4_prediction<-predict(rpart_tree_k4,newdata=df_validation_firmi_actino_sub_k4[,2:257], type='class')
 
 #Build a contingency table of the counts at each combination of factor levels
-rpart_evaluation<-table(df_validation_firmi_actino_sub$Phylum,rpart_prediction)
+rpart_k4_evaluation<-table(df_validation_firmi_actino_sub_k4$Phylum,rpart_k4_prediction)
 
 #View the outout. Note the model misclassified 26 Actinobacteria as Firmicutes, and misclassified 23 Firmicutes as Actinobacteria
-rpart_evaluation
+rpart_k4_evaluation
 
 #Use a confusion matrix to evaluate the performance of the decision tree.
-rpart_confusion_matrix<-confusionMatrix(rpart_prediction,df_validation_firmi_actino_sub$Phylum)
+rpart_k4_confusion_matrix<-confusionMatrix(rpart_k4_prediction,df_validation_firmi_actino_sub_k4$Phylum)
 
 #Print the confusion; shows accuracy of 97.55%
-print(rpart_confusion_matrix)
+print(rpart_k4_confusion_matrix)
 ```
 #Install and load packages to plot the tree
 #install.packages("rattle")
 library("rattle")
 
 #Plot the tree using rattle package
-fancyRpartPlot(model=rpart_tree, main="Decision Tree for Taxonomic Classification of \n Phylum (Actinobacteria or Firmicutes) Using 4-mer Features ",caption=" ",yshift=-13,palettes=c("Greys", "Oranges"))
+fancyRpartPlot(model=rpart_tree_k4, main="Decision Tree for Taxonomic Classification of \n Phylum (Actinobacteria or Firmicutes) Using 4-mer Features ",caption=" ",yshift=-13,palettes=c("Greys", "Oranges"))
 
 
 
 ####KNN Classifier----
 ```{r KNN}
-#install packages
-#install.packages("class")
-library("class")
 
 #Checking to see if the data needs to be normalized. Since all numerical values are within ~similar range, normalization is deemed not to be necessary.
-summary(df_firmi_actino)
-
-#set seed so results are reproducible in the future
-set.seed(124)
-
+summary(df_firmi_actino_k4)
 
 ###KNN#1: Using the same training and validation sets as defined for the RF models.
 
 #Build KNN Classifier 
 #k=3 chosen to obtain fast computation, reduce variance from noise, and ideally balance the risks of underfitting and overfitting. An odd number was selected because this is a binary classifier. It is expect that this may need to be increased, because while there isn't a single k-value that is optimal across all data sets, k=sqrt(number of data points) in a reported rule of thumb (Singh et al., 2017).
-knn_prediction1<-knn(train=dfTraining[,5:260],test=dfvalidation[,5:260],cl=dfTraining$Phylum,k=3)
+knn_prediction1<-knn(train=dfTraining_k4[,5:260],test=dfvalidation_k4[,5:260],cl=dfTraining$Phylum,k=3)
 
 #Create and view confusion matrix for KNN
-knn_confusion_matrix<-confusionMatrix(table(knn_prediction1,dfvalidation$Phylum))
+knn_confusion_matrix<-confusionMatrix(table(knn_prediction1,dfvalidation_k4$Phylum))
 knn_confusion_matrix
 
 
@@ -479,17 +463,17 @@ knn_confusion_matrix
 ###Define validation data set for KNN
 
 #Assign either a 1 or a 2 to each row of the dataset. The Sample size is the number records in the dataset (8000). We assign 1s with a probability of 0.67 to create a training set with 2/3 of the records from the original data set, and assign 2's with a probability of 0.33 to create validation set with 1/3 of the records from the original dataset.
-knn_sample <- sample(2, nrow(df_firmi_actino), replace=TRUE, prob=c(0.67, 0.33))
+knn_sample <- sample(2, nrow(df_firmi_actino_k4), replace=TRUE, prob=c(0.67, 0.33))
 
 #Define the training data set for KNN
-knn_training <- df_firmi_actino[knn_sample==1,5:260]
+knn_training <- df_firmi_actino_k4[knn_sample==1,5:260]
 
 #Define the validation data set for KNN
-knn_validation <- df_firmi_actino[knn_sample==2,5:260]
+knn_validation <- df_firmi_actino_k4[knn_sample==2,5:260]
 
 #Store phylum labels in factor vectors and divide them over the training and test sets
-knn.trainlabels<-df_firmi_actino[knn_sample==1,3]
-knn.validationlabels<-df_firmi_actino[knn_sample==2,3]
+knn.trainlabels<-df_firmi_actino_k4[knn_sample==1,3]
+knn.validationlabels<-df_firmi_actino_k4[knn_sample==2,3]
 
 #Build the KNN Classifier
 knn_prediction<-knn(train=knn_training,test=knn_validation,cl=knn.trainlabels,k=3)
@@ -513,10 +497,6 @@ names(knn.pred.val)<-c("Predicted Phylum","Observed Phylum")
 knn.pred.val
 
 #Further evaluate KNN performance
-
-#Install and load gmodels package
-install.packages("gmodels")
-library(gmodels)
 
 #Create contingency table while indicating that we do not want chi-square contribution of each cell to be included. Note that 1 Firmicutes was mislabelled as Actinobacteria.
 CrossTable(x=knn.validationlabels, y=knn_prediction,prop.chisq=FALSE)
